increased margin size to avoid clipping

--- a/site/themes/s2b_hugo_theme/static/css/custom.css
+++ b/site/themes/s2b_hugo_theme/static/css/custom.css
@@ -72,8 +72,8 @@ main .donate a {
 }
 
 .customers .item {
-  margin-top: 2px;
-  margin-bottom: 2px;
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 
 .customers .item:focus-within {
